# Spotless-Film

./: BUILD_INSTRUCTIONS.md  WINDOWS_BUILD.md  main.py  pyproject.toml
src/: build_executable.py  spotless_film.spec
