[project]
name = "spotless-film"
version = "1.0.0"
description = "AI-Powered Film Dust Removal - Remove dust and scratches from scanned film photographs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yahya Rahhawi" }]
keywords = ["image-processing", "dust-removal", "film", "photography", "deep-learning", "inpainting"]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "customtkinter>=5.0.0",
    "tkinterdnd2>=0.3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]
# LaMa inpainting (requires Rust compiler)
lama = [
    "lama-cleaner>=1.2.0",
]

[project.scripts]
spotless-film = "src.spotless_film_modern:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pyinstaller>=6.0.0",
]
